--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+
     <application
             android:name=".SeizeTheDayApplication"
             android:allowBackup="true"
@@ -29,6 +32,11 @@
                     android:name="android.app.lib_name"
                     android:value="" />
         </activity>
+
+        <activity
+                android:name=".core.ui.LocalImagePickerActivity"
+                android:exported="false"
+                android:theme="@style/Theme.SeizeTheDay" />
     </application>
 
 </manifest>
