--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -60,7 +60,7 @@ composeCollapsingToolbar = "2.3.5"
 coil = "2.2.2"
 
 [libraries]
-kotlin-stdlib = { group = "org.jetbrains.kotlinx", name = "kotlin-stdlib", version.ref = "kotlin" }
+kotlin-stdlib-jdk8 = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 
 desugar = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "coreLibraryDesugar" }
@@ -111,7 +111,7 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "daggerHilt" }
 
 accompanist-pager = { group = "com.google.accompanist", name = "accompanist-pager", version.ref = "accompanist" }
-toolbar-compose = { group = "me.onebone", name = "accompanist-pager", version.ref = "composeCollapsingToolbar" }
+toolbar-compose = { group = "me.onebone", name = "toolbar-compose", version.ref = "composeCollapsingToolbar" }
 
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "testRunner" }
