--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *.iml
 .gradle
+.idea
 /local.properties
 /.idea/*
 /.idea/caches
 /.idea/libraries
+/.idea/misc.xml
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
@@ -16,3 +18,4 @@
 local.properties
 /jingomkey
 /gradle.properties
+/.idea/
