--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,7 +57,7 @@ composeCollapsingToolbar = "2.3.5"
 coil = "2.2.2"
 
 #google accompanist
-accompanist = "0.33.0-alpha"
+accompanist = "0.31.5-beta"
 
 [libraries]
 kotlin-stdlib-jdk8 = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
